initial implementation of converter test